--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -5,145 +5,122 @@
   <title>Wind Breaker Season 1</title>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <!-- Poppins Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"/>
   <style>
-    body { font-family: 'Poppins', sans-serif; margin:0; }
+    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Poppins', sans-serif; }
+    #app { display: flex; flex-direction: column; height: 100%; }
+    .header { flex-shrink: 0; }
+    .content { flex: 1; overflow: auto; padding: 1rem; }
     .video-wrapper { position: relative; width: 100%; padding-top: 56.25%; }
-    .video-wrapper iframe, .video-wrapper .overlay, .video-wrapper .controls { position: absolute; top:0; left:0; width:100%; height:100%; }
-    /* Overlay layer catches logo clicks only */
-    .overlay { pointer-events: none; }
-    .overlay .logo-block { position: absolute; bottom: 0.5rem; right: 0.5rem; width: 3rem; height: 2rem; cursor: pointer; pointer-events: auto; }
-    /* Controls layer */
-    .controls { display: flex; justify-content: center; align-items: flex-end; gap: 1rem; padding-bottom: 1rem; pointer-events: auto; }
-    .controls button { background: rgba(0,0,0,0.6); color: #fff; border: none; padding: 0.5rem 0.75rem; border-radius: 0.375rem; }
+    iframe { position: absolute; top:0; left:0; width:100%; height:100%; }
+    .overlay { position: absolute; top:0; left:0; width:100%; height:100%; pointer-events: none; }
+    .overlay .pop { position: absolute; bottom:0.5rem; right:0.5rem; width:3rem; height:2rem; pointer-events: auto; cursor: pointer; }
+    .controls { position: absolute; bottom:1rem; left:50%; transform: translateX(-50%); display: flex; gap:1rem; pointer-events: auto; }
+    .controls button { background: rgba(0,0,0,0.6); color: #fff; border: none; padding:0.5rem 1rem; border-radius:0.375rem; }
+    .episode-btn { width: 100%; text-align: left; padding:0.5rem; background:#4c1d95; color:#fff; border-radius:0.375rem; }
   </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen">
-  <div class="max-w-4xl mx-auto p-4 space-y-6">
+<body class="bg-gray-900 text-white">
+  <div id="app">
     <!-- Header -->
-    <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-3">
-      <h1 class="text-3xl font-bold">Wind Breaker - Season 1</h1>
+    <header class="header flex flex-wrap items-center justify-between bg-gray-800 p-4">
+      <h1 class="text-2xl font-bold">Wind Breaker - Season 1</h1>
       <div class="flex flex-wrap gap-2">
-        <a href="index.2.html" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded">← Go Back</a>
-        <a href="support.html"  class="px-4 py-2 bg-pink-600 hover:bg-pink-500 rounded">💖 Support Us</a>
-        <input id="search" type="text" placeholder="Search episodes..." class="px-3 py-2 rounded text-black" />
-        <select id="theme" class="px-3 py-2 rounded bg-gray-800">
-          <optgroup label="Dark Themes">
-            <option value="bg-gray-900 text-white">Grey (default)</option>
+        <a href="index.2.html" class="px-3 py-1 bg-purple-700 hover:bg-purple-800 rounded">← Go Back</a>
+        <a href="support.html" class="px-3 py-1 bg-pink-600 hover:bg-pink-700 rounded">💖 Support Us</a>
+        <input id="search" type="text" placeholder="Search episodes..." class="px-2 py-1 rounded text-black" />
+        <select id="theme" class="px-2 py-1 rounded bg-gray-700">
+          <optgroup label="Dark">
+            <option value="bg-gray-900 text-white">Grey</option>
             <option value="bg-purple-900 text-white">Purple</option>
             <option value="bg-blue-900 text-white">Blue</option>
             <option value="bg-black text-white">Black</option>
             <option value="bg-teal-900 text-white">Teal</option>
           </optgroup>
-          <optgroup label="Light Themes">
+          <optgroup label="Light">
             <option value="bg-gray-100 text-black">Light Grey</option>
-            <option value="bg-blue-100 text-black">Sky Blue</option>
+            <option value="bg-blue-100 text-black">Sky</option>
             <option value="bg-yellow-100 text-black">Cream</option>
             <option value="bg-pink-100 text-black">Pink</option>
             <option value="bg-green-100 text-black">Mint</option>
           </optgroup>
         </select>
+        <button id="fsBtn" class="px-3 py-1 bg-gray-700 hover:bg-gray-600 rounded">⛶ Fullscreen</button>
       </div>
-    </header><!-- Video Player -->
-<div id="videoWrapper" class="video-wrapper rounded-lg overflow-hidden shadow-lg bg-black">
-  <iframe id="player" src="https://www.youtube.com/embed/ne0Y0vyjxpE?enablejsapi=1&controls=0&modestbranding=1&rel=0&autoplay=1" frameborder="0" allow="autoplay; encrypted-media; fullscreen" allowfullscreen></iframe>
-  <div class="overlay">
-    <div class="logo-block" onclick="openAd()"></div>
+    </header><!-- Main content -->
+<div class="content">
+  <!-- Video Player -->
+  <div class="video-wrapper mb-4">
+    <iframe id="player" src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media; fullscreen" allowfullscreen></iframe>
+    <div class="overlay">
+      <div class="pop" onclick="window.open('https://sawutser.top/4/9278457','_blank')"></div>
+    </div>
+    <div class="controls">
+      <button onclick="seek(-15)">⏪ 15s</button>
+      <button id="playPause" onclick="togglePlay()">⏯️</button>
+      <button onclick="seek(15)">15s ⏩</button>
+    </div>
   </div>
-  <div class="controls">
-    <button onclick="seek(-15)">⏪ 15s</button>
-    <button id="playBtn" onclick="togglePlay()">▶️</button>
-    <button onclick="seek(15)">15s ⏩</button>
-    <button onclick="goFull()">⛶</button>
+
+  <!-- Description -->
+  <div class="mb-4 p-3 bg-gray-800 rounded">
+    <h2 class="text-xl font-semibold mb-1">About Wind Breaker</h2>
+    <p>Haruka Sakura joins Furin High, a school of delinquents who secretly protect their city. Packed with action, heart, and honor.</p>
+  </div>
+
+  <!-- Episodes -->
+  <div>
+    <h3 class="text-lg font-semibold mb-2">Episodes</h3>
+    <div id="episodes" class="grid grid-cols-1 sm:grid-cols-2 gap-2"></div>
   </div>
 </div>
-
-<!-- Description -->
-<div class="bg-gray-800 p-4 rounded">
-  <h2 class="text-xl font-semibold mb-2">About Wind Breaker</h2>
-  <p>Haruka Sakura joins Furin High, a school of delinquents who secretly protect their city. Packed with action, honor, and friendship.</p>
-</div>
-
-<!-- Episodes -->
-<div>
-  <h3 class="text-lg font-semibold mb-2">Episodes</h3>
-  <div id="list" class="grid grid-cols-1 sm:grid-cols-2 gap-3"></div>
-</div>
-
-<!-- Footer -->
-<footer class="text-center text-sm text-gray-400 mt-8 border-t border-gray-700 pt-4">
-  <p>Special thanks to the original creators & copyright holders of <strong>Wind Breaker</strong>.</p>
-  <p class="italic">All video content is property of the respective owners.</p>
-</footer>
 
   </div>  <script>
-    const player = document.getElementById('player');
-    const list    = document.getElementById('list');
-    const search  = document.getElementById('search');
-    const theme   = document.getElementById('theme');
-
-    // Episodes data
-    const episodes = [
-      { title: 'Episode 1', id: 'ne0Y0vyjxpE' },
-      { title: 'Episode 2', id: 'J2568cnOa1g' },
-      { title: 'Episode 3', id: 'QOMv17IjJAU' },
-      { title: 'Episode 4', id: 'MT7WzTJZCxg' },
-      { title: 'Episode 5', id: '4sRfndp1vAM' },
-      { title: 'Episode 6', id: 'oTvQ-5BNC6w' },
-      { title: 'Episode 7', id: 'Em5lFIz_kxU' },
-      { title: 'Episode 8', id: 'SBaGblvd4mU' },
-      { title: 'Episode 9', id: '43Hj2GySjgA' },
-      { title: 'Episode 10', id: 'TIpodnZtFP4' },
-      { title: 'Episode 11', id: '_L-UG_jvnM4' },
-      { title: 'Episode 12', id: 'skAwsc6UL8A' },
-      { title: 'Episode 13', id: '-xUk9E2iQQY' }
-    ];
-
-    function render(filter='') {
-      list.innerHTML = '';
-      episodes.filter(e=>e.title.toLowerCase().includes(filter.toLowerCase()))
-        .forEach(e=>{
-          const btn = document.createElement('button');
-          btn.textContent = e.title;
-          btn.className = 'w-full text-left px-4 py-2 bg-purple-700 hover:bg-purple-800 rounded';
-          btn.onclick = () => {
-            player.src = `https://www.youtube.com/embed/${e.id}?enablejsapi=1&controls=0&modestbranding=1&rel=0&autoplay=1`;
-          };
-          list.appendChild(btn);
-        });
-    }
-    render();
-    search.addEventListener('input', e=>render(e.target.value));
-
-    // Theme persistence
-    theme.onchange = () => {
-      document.body.className = theme.value;
-      localStorage.setItem('theme', theme.value);
-    };
-    const saved = localStorage.getItem('theme');
-    if(saved) { theme.value = saved; document.body.className = saved; }
-
-    // Overlay popunder
-    function openAd(){ window.open('https://sawutser.top/4/9278457','_blank'); }
-
-    // YouTube API commands
+    // YouTube IFrame API messaging
     function post(cmd, args=[]) {
-      player.contentWindow.postMessage(JSON.stringify({ event:'command', func:cmd, args }), '*');
+      player.contentWindow.postMessage(JSON.stringify({ event:'command', func:cmd, args:args }), '*');
     }
-    function togglePlay(){ post('playVideo'); post('pauseVideo'); }
-    function seek(s){ post('seekBy',[s,true]); }
-    function goFull(){ (player.requestFullscreen||player.webkitRequestFullscreen).call(player); }
+    let playing = true;
+    function togglePlay() {
+      if (playing) { post('pauseVideo'); document.getElementById('playPause').innerText='▶️'; }
+      else       { post('playVideo');  document.getElementById('playPause').innerText='⏸️'; }
+      playing = !playing;
+    }
+    function seek(sec) { post('seekBy', [sec, true]); }
 
-    // Fullscreen layering
-    document.addEventListener('fullscreenchange', ()=>{
-      const ow = document.querySelector('.overlay'), ctl = document.querySelector('.controls');
-      if(document.fullscreenElement) {
-        ow.style.position = ctl.style.position = 'fixed';
-      } else {
-        ow.style.position = ctl.style.position = 'absolute';
-      }
+    // Fullscreen on #app
+    const app = document.getElementById('app');
+    document.getElementById('fsBtn').onclick = () => {
+      if (!document.fullscreenElement) app.requestFullscreen();
+      else document.exitFullscreen();
+    };
+
+    // Episodes
+    const eps = [
+      'ne0Y0vyjxpE','J2568cnOa1g','QOMv17IjJAU','MT7WzTJZCxg','4sRfndp1vAM',
+      'oTvQ-5BNC6w','Em5lFIz_kxU','SBaGblvd4mU','43Hj2GySjgA','TIpodnZtFP4',
+      '_L-UG_jvnM4','skAwsc6UL8A','-xUk9E2iQQY'
+    ];
+    const container = document.getElementById('episodes');
+    eps.forEach((id,i) => {
+      const btn=document.createElement('button');
+      btn.className='episode-btn';
+      btn.innerText='Episode '+(i+1);
+      btn.onclick=()=>{ player.src=`https://www.youtube.com/embed/${id}?rel=0&modestbranding=1&enablejsapi=1&autoplay=1`; };
+      container.appendChild(btn);
     });
-  </script>  <!-- Anti-adblock popunder script -->  <script>(function(s,u,z,p){s.src=u; s.setAttribute('data-zone',z); (p||document.body).appendChild(s);} )
-    (document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body);
-  </script></body>
+
+    // Search filter
+    document.getElementById('search').oninput = e => {
+      const v=e.target.value.toLowerCase();
+      [...container.children].forEach(b=> b.style.display=b.innerText.toLowerCase().includes(v)?'block':'none');
+    };
+
+    // Themes
+    const theme = document.getElementById('theme');
+    theme.onchange = () => { document.body.className = theme.value; localStorage.theme=theme.value; };
+    if(localStorage.theme) { theme.value=localStorage.theme; document.body.className=theme.value; }
+    else { document.body.className='bg-gray-900 text-white'; }
+  </script>  <!-- Popunder (anti-adblock) -->  <script>(function(s,u,z,p){s.src=u;s.setAttribute('data-zone',z);(p||document.body).appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body)</script></body>
 </html>
